# polysemy-megaparsec

./: .gitignore  LICENSE  polysemy-megaparsec.cabal  stack.yaml
lib/Polysemy/: Megaparsec.hs
test/: Main.hs  Parsers.hs
test/Suite/: Parser.hs
